# datarace-prediction

./: Examples.hs  HeuristicReorder.hs  PWR.hs  PWR_old.hs  PrintTrace.hs  Profiling.hs  README.md  ReorderBenchmark.hs  ReorderNaive.hs  Trace.hs  TraceReorder.hs  benchmark.html  datarace-prediction.cabal  main.hs
benchmarking-results/: reorder-benchmark.html
