cabal-version:      2.4
name:               datarace-prediction
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lisa Hofert
maintainer:         hofertlisa@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

library
    exposed-modules: Trace, PWR, PrintTrace, Examples, TraceReorder, ReorderNaive
    -- other-modules	
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0, mtl, containers
    hs-source-dirs:   app, .
    default-language: Haskell2010
