cabal-version:      2.4
name:               datarace-prediction
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lisa Hofert
maintainer:         hofertlisa@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable reorder-benchmark
    main-is:          ReorderBenchmark.hs
    ghc-options:      -main-is ReorderBenchmark -O2
    other-modules: Trace, PWR, PrintTrace, Examples, TraceReorder, ReorderNaive
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0, mtl, containers, criterion
    hs-source-dirs:   .
    default-language: Haskell2010

executable profiling
    main-is: Profiling.hs
    ghc-options:   -main-is Profiling -O2 -prof -rtsopts
    other-modules: Trace, PWR, PrintTrace, Examples, TraceReorder, ReorderNaive
    build-depends:    base ^>=4.13.0.0, mtl, containers
    hs-source-dirs:   .
    default-language: Haskell2010
